tests/typechecker/should_fail/dot_operator_pattern_matching_1.csp
datatype Z = B.{0..1}

channel c : Z

f.y = B

P(f,y) = 
	let
		B = f.y
	within B
	
g(x.y) = y

z = g(B)
